--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Morrison's Barcode Generator</title>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <style>
@@ -9,13 +10,12 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow: hidden;
       background-color: #00703a;
       font-family: Arial, sans-serif;
       position: relative;
     }
 
-    /* Repeating SHARK watermark */
+    /* Watermark */
     body::before {
       content: '';
       position: fixed;
@@ -25,24 +25,17 @@
       height: 100%;
       background-image: repeating-linear-gradient(
         45deg,
-        rgba(255, 255, 255, 0.35) 0,
-        rgba(255, 255, 255, 0.35) 1px,
+        rgba(255, 255, 255, 0.25) 0,
+        rgba(255, 255, 255, 0.25) 1px,
         transparent 1px,
         transparent 60px
       ),
       repeating-linear-gradient(
         -45deg,
-        rgba(255, 255, 255, 0.35) 0,
-        rgba(255, 255, 255, 0.35) 1px,
+        rgba(255, 255, 255, 0.25) 0,
+        rgba(255, 255, 255, 0.25) 1px,
         transparent 1px,
         transparent 60px
-      ),
-      repeating-linear-gradient(
-        0deg,
-        transparent 0,
-        transparent 20px,
-        rgba(255,255,255,0.08) 20px,
-        rgba(255,255,255,0.08) 40px
       );
       z-index: 0;
       pointer-events: none;
@@ -50,15 +43,15 @@
 
     body::after {
       content: "SHARK ";
-      font-size: 20px;
-      color: rgba(255,255,255,0.2);
+      font-size: 14px;
+      color: rgba(255,255,255,0.15);
       position: fixed;
-      width: 200%;
-      height: 200%;
+      width: 300%;
+      height: 300%;
       top: 0;
       left: 0;
       white-space: pre-wrap;
-      line-height: 1.8;
+      line-height: 1.4;
       z-index: 0;
       pointer-events: none;
       transform: rotate(-30deg);
@@ -66,10 +59,10 @@
 
     .container {
       background-color: #fff;
-      width: 100%;
-      max-width: 500px;
+      width: 90%;
+      max-width: 450px;
       margin: auto;
-      padding: 30px 40px;
+      padding: 25px 20px;
       border-radius: 15px;
       text-align: center;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -81,21 +74,24 @@
 
     h1 {
       margin-bottom: 20px;
+      font-size: clamp(20px, 6vw, 28px);
     }
 
     input, button {
       width: 100%;
       padding: 10px;
-      margin: 10px 0;
+      margin: 8px 0;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      box-sizing: border-box;
     }
 
     #warning {
       color: black;
       font-weight: bold;
-      margin: 10px 0;
+      margin: 12px 0;
+      font-size: 14px;
     }
 
     a.discord {
@@ -108,15 +104,24 @@
 
     .barcode-box {
       background-color: #ffffff;
-      padding: 15px;
+      padding: 12px;
       border: 1px solid #ccc;
       margin-top: 20px;
+      overflow-x: auto;
     }
 
     #downloadBtn {
       background-color: #eee;
       cursor: pointer;
       margin-top: 15px;
+    }
+
+    @media (max-height: 600px) {
+      .container {
+        top: 0;
+        transform: none;
+        margin-top: 20px;
+      }
     }
   </style>
 </head>
@@ -127,7 +132,7 @@
     <input type="text" id="productCode" placeholder="Enter original product barcode">
     <input type="text" id="price" placeholder="Enter Product Name">
     <button onclick="generateBarcode()">Generate Barcode</button>
-    <div id="warning">makes all products 3p | made by shark & fredo </div>
+    <div id="warning">makes all products 3p | made by shark & fredo</div>
     <a class="discord" href="https://discord.gg/SuVMU2T9qK" target="_blank">https://discord.gg/SuVMU2T9qK</a>
 
     <div class="barcode-box">
