--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="container">
     <h1>Morrison's Barcode Generator</h1>
     <input type="text" id="productCode" placeholder="Enter original product barcode">
-    <input type="text" id="price" placeholder="Enter Product Name">
+    <input type="text" id="price" placeholder="Enter Product Name (not req)">
     <button onclick="generateBarcode()">Generate Barcode</button>
     <div id="warning">makes all products 3p | made by shark & fredo</div>
     <a class="discord" href="https://discord.gg/SuVMU2T9qK" target="_blank">https://discord.gg/SuVMU2T9qK</a>
